# jira-id-hook

./: .gitignore  .pre-commit-hook.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
pre_commit_hooks/: jira_id_hook.py
