[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-id-hook"
version = "0.1.0"
description = "A project for managing JIRA ID hooks"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    # List your project dependencies here
    # e.g., "requests>=2.25.1", "numpy>=1.19.2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]

[project.scripts]
# Define any console scripts here
jira-id-hook = "pre_commit_hooks.jira_id_hook:main"